[metadata]
name = saltext.prometheus
description = Salt Extension Modules for Prometheus
long_description = file: README.md
long_description_content_type = text/markdown
author = EITR Technologies, LLC
author_email = devops@eitr.tech
keywords = salt-extension, salt, prometheus
url = https://github.com/eitrtechnologies/saltext-prometheus
project_urls =
    Source=https://github.com/eitrtechnologies/saltext-prometheus
    Tracker=https://github.com/eitrtechnologies/saltext-prometheus/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  salt>=3004
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
salt.loader=
  saltext.prometheus = saltext.prometheus


[options.extras_require]
tests =
  mock==3.0.5
  pytest==6.2.4
  pytest-salt-factories==0.906.0
dev =
  nox==2021.6.12
  pre-commit==2.13.0
  pylint
  SaltPyLint
docs =
  sphinx
  furo
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
docsauto =
  sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
